--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
 			<footer class="footer">
 				<div class="footer__container">
 					<a href="#" class="header__logo"><img src="img/logo.svg" alt="Logo" /></a>
-					<a target="_blank" href="viber://chat?number=%2B380504891020" class="socials__item">
+					<a target="_blank" href="viber://chat?number=%2B380504891020" class="socials__item footer-socials__item--viber">
 						<div class="socials__icon _icon-viber">
 							<span></span>
 						</div>
@@ -951,7 +951,6 @@
 							</li>
 						</ul>
 						<div class="header__socials-mobile">
-							
 							<a target="_blank" href="https://www.instagram.com/planetaigrcom/" class="socials__item">
 								<div class="socials__icon _icon-insta">
 									<span></span>
