--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
 			<footer class="footer">
 				<div class="footer__container">
 					<a href="#" class="header__logo"><img src="img/logo.svg" alt="Logo" /></a>
-					<a target="_blank" href="viber://chat?number=%2B380504891020" class="socials__item footer-socials__item--viber">
+					<a target="_blank" href="viber://chat?number=%2B380504891020" class="socials__item footer-socials__item--viber socials__item--viber">
 						<div class="socials__icon _icon-viber">
 							<span></span>
 						</div>
